--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-# baseURL = 'https://tean-lai.github.io/'
-baseURL = 'http://localhost:1313/'
+baseURL = 'https://tean-lai.github.io/'
+# baseURL = 'http://localhost:1313/'
 languageCode = 'en-us'
 title = "Tean's Website"
