change theme and setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,9 @@
 [submodule "themes/poison"]
 	path = themes/poison
 	url = https://github.com/lukeorth/poison.git
+[submodule "themes/hugo-dead-simple"]
+	path = themes/hugo-dead-simple
+	url = https://github.com/barklan/hugo-dead-simple.git
+[submodule "themes/hugo-bearblog"]
+	path = themes/hugo-bearblog
+	url = https://github.com/janraasch/hugo-bearblog.git
