refactor: change thoughts and wikit to just notes

--- a/hugo.toml
+++ b/hugo.toml
@@ -23,15 +23,10 @@ pagination.pagerSize = 5  # not sure what this does
       url = "/"
       weight = 1
     [[languages.en.menu.main]]
-      identifier = "thoughts"
-      name = "Thoughts"
-      url = "/thoughts"
+      identifier = "notes"
+      name = "Notes"
+      url = "/notes"
       weight = 2
-    [[languages.en.menu.main]]
-      identifier = "wiki"
-      name = "Wiki"
-      url = "/wiki"
-      weight = 3
     [[languages.en.menu.main]]
       identifier = "professional"
       name = "Professional"
